--- a/package.json
+++ b/package.json
@@ -14,6 +14,16 @@
     "express": "~4.13.3",
     "sugar": "~1.4.1",
     "socket.io": "~1.4.4",
-    "sqlite3": "~3.1.1"
+    "sqlite3": "~3.1.1",
+    "grunt": "~0.4.5",
+    "coffee-script": "~1.10.0"
+  },
+  "devDependencies": {
+    "grunt": "~0.4.5",
+    "grunt-contrib-coffee": "~0.13.0",
+    "grunt-contrib-uglify": "~0.11.0",
+    "grunt-contrib-concat": "~0.5.1",
+    "grunt-contrib-cssmin": "~0.14.0",
+    "grunt-contrib-copy": "~0.8.2"
   }
 }
